# perzine

./: .gitignore
server/: .env.template  Cargo.toml
server/src/: lib.rs  main.rs
server/src/core/: auth.rs  error.rs  mod.rs  response.rs
server/src/core/extract/: auth.rs  mod.rs
server/src/dto/: comment.rs  mod.rs  post.rs  taxonomy.rs
server/src/entity/: comment.rs  mod.rs  post.rs  post_taxonomy.rs  site_option.rs  taxonomy.rs
server/src/extract/: auth.rs  json_payload.rs  mod.rs  pagination.rs  path.rs  query.rs
server/src/model/: mod.rs  post.rs  site_option.rs  taxonomy.rs
server/src/models/: mod.rs  post.rs  site_option.rs  utils.rs
server/src/route/: mod.rs  option.rs
server/src/route/auth/: mod.rs
server/src/route/comment/: handler.rs  mod.rs  utils.rs
server/src/route/option/: handler.rs  mod.rs
server/src/route/post/: handler.rs  mod.rs  utils.rs
server/src/route/taxonomy/: curl.rs  handler.rs  mod.rs
server/src/utils/: core.rs  error.rs  mod.rs  response.rs
web/: .prettierrc  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  windi.config.ts
web/admin/: index.html
web/src/: AdminApp.vue  IndexApp.vue  admin.ts  global.d.ts  index.ts  style.less
web/src/components/: VideoPlayer.vue
web/src/hooks/: useThemeMode.ts
web/src/theme/: index.ts  variables.less
web/src/views/: ThemeModeSwitcher.vue
