[package]
name = "perzine_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.6"
tokio = { version = "1.19.2", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
dotenv = "0.15.0"
config = "0.13.1"
serde = "1.0.138"
serde_repr = "0.1.9"
once_cell = "1.13.0"
axum = { version = "0.5.13", features = ["multipart", "macros", "http2", "headers"] }
jsonwebtoken = "8.1.1"