[package]
name = "perzine_server"
version = "0.1.0"
authors = ["Wayne Wu <wayne-wu@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
dotenv = "0.15.0"
config = "0.13.1"
async-recursion = "1.0.0"
serde = "1.0.138"
serde_repr = "0.1.9"
serde_json = "1.0.85"
serde-enum-str = "0.2.5"
once_cell = "1.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
axum = { version = "0.5.13", features = ["multipart", "macros", "http2", "headers"] }
jsonwebtoken = "8.1.1"
sea-orm={ version="0.9", features=["runtime-tokio-native-tls", "sqlx-postgres", "debug-print"] }